third portfolio template option

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -470,7 +470,7 @@ div.feature{
 
 div.feature span.label-portfolio {
   background-color: #006dcc;
-  font-size: 200%;
+  /*font-size: 200%;*/
   line-height: normal;
 }
 
