--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -477,3 +477,17 @@ div.feature span.label-portfolio {
 div.feature .span2 {
   line-height: normal;
 }
+
+div.feature p {
+  margin-top: 10px;
+}
+
+/*Customized icons*/
+i.portfolio {
+  color: #C7C7C7;
+  padding-bottom: 10px;
+}
+
+ul.icons-ul li {
+  padding-bottom: 10px;
+}
