Add width to homepage content pane

--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -62,8 +62,8 @@
                 %a{:href => "#"} Process
               %li
                 %a{:href => "#contact"} Contact
-
-          = yield
+          .span9
+            = yield
 
       %footer.footer
         .container
