--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -78,15 +78,11 @@
             });
         };
 
-        // Called .one second after the onload event for the demo (as I'm hacking the
-        // fontface load event a bit here)
-
-        // Please do not do this in a production environment - you should really use
-        // google WebFont loader events (or something similar) for better control
-        $(window).load(function() {
-            // So, to recap... don't actually do this, it's nasty!
-            setTimeout(slabTextHeadlines, 0.1);
+        $(function() {
+          slabTextHeadlines();
         });
+      = partial 'layouts/google_analytics'
+
       /   %script{:src => "assets/js/jquery.gmap.js"}
       / %script{:src => "http://maps.google.com/maps/api/js?sensor=false", :type => "text/javascript"}
       / MAP
