--- a/source/2009-03-18-updating-textarea-with-ajax-unterminated-string-literal.html.erb
+++ b/source/2009-03-18-updating-textarea-with-ajax-unterminated-string-literal.html.erb
@@ -4,11 +4,11 @@ title: ! 'Updating textarea with Ajax: unterminated string literal'
 post_date: 2009-03-18 13:04:01.000000000 -05:00
 ---
 If you try to update a textarea with newlines in it via Ajax, you may get an "Unterminated string literal" error.  The update coming back may look like this:
-<pre name="code" class="ruby">$('textarea_to_update').value='line one
+<% code('ruby') do %>$('textarea_to_update').value='line one
 line two
 line three';</pre>
 
 This will fail because the javascript will interpret the newline as the end of the command.
 
 So, replace those newlines with the newline character and the textarea will get updated correctly:
-<pre name="code" class="ruby">textarea_value.gsub!(/\n/, '\n')</pre>
+<% code('ruby') do %>textarea_value.gsub!(/\n/, '\n')<% end %>
