--- a/source/2012-03-08-bundler-1-1-vs-1-0-install-speedup.html.erb
+++ b/source/2012-03-08-bundler-1-1-vs-1-0-install-speedup.html.erb
@@ -11,7 +11,7 @@ Now, bundler 1.1 is smarter about this.  It can ask rubygems.org directly to giv
 
 Here are my results, for a project with a brand new empty gemset:
 
-<pre name="code" class="ruby">
+<% code('ruby') do %>
 $ gem install bundler -v=1.0.18 && time bundle install
 Installing ...
 Your bundle is complete! Use `bundle show [gemname]` to see where a bundled gem is installed.
