--- a/source/2012-08-14-whats-new-in-ruby-august-2012-editio.html.erb
+++ b/source/2012-08-14-whats-new-in-ruby-august-2012-editio.html.erb
@@ -10,25 +10,25 @@ Every month, <a href="http://meetup.com/kcruby">Kansas City Ruby</a> (#kcruby) r
 
 <h4><a href="http://myronmars.to/n/dev-blog/2012/06/rspecs-new-expectation-syntax" target="_blank">rspec's new expectation syntax</a></h4>
 <p>rspec is getting a new expectation syntax.</p>
-Now: <pre name="code" class="ruby">foo.should eq(bar)
+Now: <% code('ruby') do %>foo.should eq(bar)
 foo.should_not eq(bar)</pre>
-Then: <pre name="code" class="ruby">expect(foo).to eq(bar)
+Then: <% code('ruby') do %>expect(foo).to eq(bar)
 expect(foo).not_to eq(bar)</pre>
 <p>Read <a href="http://myronmars.to/n/dev-blog/2012/06/rspecs-new-expectation-syntax" target="_blank">the post</a> to get more information about the new rspec syntax.</p>
 
 <h4><a href="http://reefpoints.dockyard.com/ruby/2012/06/26/rails-4-sneak-peek-async-actionmailer.html" target="_blank">Rails 4.0 Sneak Peek: Asynchronous ActionMailer</a></h4>
 <p>
 Rails 4.0 has <code>Rails.queue</code> and this new feature allows you to push emails into the queue with code like:
-<pre name="code" class="ruby">class WelcomeMailer < ActionMailer::Base
+<% code('ruby') do %>class WelcomeMailer < ActionMailer::Base
   self.async = true
 end</pre>
 
 When you call the mailer:
-<pre name="code" class="ruby">WelcomeMailer.welcome(@user.id).deliver</pre>
+<% code('ruby') do %>WelcomeMailer.welcome(@user.id).deliver<% end %>
 
 ... you need to use ids and look the object up in the mailer, instead of marshalling the entire object, like so:
 
-<pre name="code" class="ruby">
+<% code('ruby') do %>
 class WelcomeMailer < ActionMailer::Base
   def welcome(id)
     @user = User.find(id)
