--- a/source/2008-08-03-rake-list-tasks.html.erb
+++ b/source/2008-08-03-rake-list-tasks.html.erb
@@ -4,11 +4,11 @@ title: Rake list tasks
 post_date: 2008-08-03 23:37:53.000000000 -05:00
 ---
 I can never remember the exact name of a rake task, so I use this all the time:
-<pre class="ruby">&gt; rake -T</pre>
+<% end %>
 You can also filter the list of tasks that's shown. For instance, if you only want to see the database tasks:
-<pre class="ruby">&gt; rake -T db</pre>
+<% end %>
 The -T option is handy when you just need to remember the exact wording.  It's not so handy when you're trying to figure out what the rake task list description is.  For that, use -D:
-<pre class="ruby">&gt; rake -D
+<% code('ruby') do %>&gt; rake -D
 ....
 rake test:units
     Run tests for units / Run the unit tests in test/unit
@@ -17,7 +17,7 @@ rake test:units
 The output is longer, but you can see the full description. You can also filter by the task name to limit the output so you don't have to scroll through the full list of tasks.
 
 On Rails 2.1.0, here's the full <code>rake -T</code> output:
-<pre class="ruby">rake db:abort_if_pending_migrations  # Raises an error if there are pending...
+<% code('ruby') do %>rake db:abort_if_pending_migrations  # Raises an error if there are pending...
 rake db:charset                      # Retrieves the charset for the curren...
 rake db:collation                    # Retrieves the collation for the curr...
 rake db:create                       # Create the database defined in confi...
