--- a/source/2008-11-23-rubygems-error-on-update-undefined-local-variable-or-method-remote_gemspecs.html.erb
+++ b/source/2008-11-23-rubygems-error-on-update-undefined-local-variable-or-method-remote_gemspecs.html.erb
@@ -4,7 +4,7 @@ title: ! 'RubyGems error on update: undefined local variable or method `remote_g
 post_date: 2008-11-23 22:49:39.000000000 -06:00
 ---
 I updated rubygems:
-<pre class="ruby">&gt;sudo gem update --system
+<% code('ruby') do %>&gt;sudo gem update --system
 Password:
 Updating RubyGems
 Updating rubygems-update
@@ -13,12 +13,12 @@ ERROR:  While executing gem ... (NameError)
     undefined local variable or method `remote_gemspecs' for
    #&lt;gem ::Commands::UpdateCommand:0x14df818&gt;</pre>
 ... but received this error:
-<pre class="ruby">undefined local variable or method `remote_gemspecs'</pre>
+<% end %>
 Reading the release notes prompted me to install the rubygems-update gem separately:
-<pre class="ruby">&gt;sudo gem install rubygems-update
+<% code('ruby') do %>&gt;sudo gem install rubygems-update
 Successfully installed rubygems-update-1.3.1</pre>
 Finally, run the update_rubygems command to actually update:
-<pre class="ruby">&gt;sudo update_rubygems
+<% code('ruby') do %>&gt;sudo update_rubygems
 Installing RubyGems 1.3.1
 mkdir -p /usr/local/lib/ruby/site_ruby/1.8
 mkdir -p /usr/local/bin
