--- a/source/2009-04-09-rails-render-partial-counters-displaying-a-records-index.html.erb
+++ b/source/2009-04-09-rails-render-partial-counters-displaying-a-records-index.html.erb
@@ -4,7 +4,7 @@ title: ! 'Rails render partial counters: displaying a record&#039;s index in a c
 post_date: 2009-04-09 15:34:09.000000000 -05:00
 ---
 I always forget that you can reference the index of an item in a collection when you're using a partial:
-<pre name="code" class="ruby">&lt;%= render :partial => 'item', :object => @items %>
+<% code('ruby') do %>&lt;%= render :partial => 'item', :object => @items %>
 # in _item.html.erb
 &lt;%= item_counter %></pre>
 This is zero-based, so you might want to +1 if you want the count to start at 1.
