--- a/source/2010-02-26-custom-date-formats-in-rails.html.erb
+++ b/source/2010-02-26-custom-date-formats-in-rails.html.erb
@@ -8,8 +8,8 @@ I like to keep my date formats all together, instead of having <code>.strftime()
 Create a file <code>/config/initializers/custom_date_formats.rb</code>
 
 Load your formats into <code>Time::DATE_FORMATS</code>
-<pre name="code" class="ruby">Time::DATE_FORMATS[:ymd] = "%Y-%m-%d"</pre>
+<% code('ruby') do %>Time::DATE_FORMATS[:ymd] = "%Y-%m-%d"<% end %>
 
 Use like so:
-<pre name="code" class="ruby">@christmas_post.created_at.to_s(:ymd)
+<% code('ruby') do %>@christmas_post.created_at.to_s(:ymd)
 # => "2009-12-25"</pre>
