--- a/source/2010-03-05-installing-sqlite-headers-on-ubuntu-sqlite3-h-not-found.html.erb
+++ b/source/2010-03-05-installing-sqlite-headers-on-ubuntu-sqlite3-h-not-found.html.erb
@@ -5,13 +5,13 @@ post_date: 2010-03-05 22:21:47.000000000 -06:00
 ---
 I was setting up <a href="http://integrityapp.com/">Integrity</a> for the first time and ran into this on my server when bundling gems:
 
-<pre name="code" class="ruby">~$ bundle install
+<% code('ruby') do %>~$ bundle install
 ...
-Installing do_sqlite3 (0.10.0) from rubygems repository at 
-  http://gemcutter.org/ with native extensions 
-  /usr/local/lib/site_ruby/1.8/rubygems/installer.rb:482:in 
-  `build_extensions': 
-ERROR: Failed to build gem native extension. 
+Installing do_sqlite3 (0.10.0) from rubygems repository at
+  http://gemcutter.org/ with native extensions
+  /usr/local/lib/site_ruby/1.8/rubygems/installer.rb:482:in
+  `build_extensions':
+ERROR: Failed to build gem native extension.
   (Gem::Installer::ExtensionBuildError)
 
 /usr/bin/ruby1.8 extconf.rb
@@ -25,8 +25,8 @@ The <code>do_sqlite3</code> gem gets compiled natively, but the development head
 
 Install them:
 
-<pre name="code" class="ruby">~$ sudo apt-get install sqlite3
+<% code('ruby') do %>~$ sudo apt-get install sqlite3
 ~$ sudo apt-get install libsqlite3-dev</pre>
 
 Then, re-bundle:
-<pre name="code" class="ruby">~$ bundle install</pre>
+<% code('ruby') do %>~$ bundle install<% end %>
