--- a/source/2010-10-21-getting-the-runaround.html.erb
+++ b/source/2010-10-21-getting-the-runaround.html.erb
@@ -8,7 +8,7 @@ Yesterday was my third day on the job and to be honest, it wasn't a lot of fun. 
 I had just added a new association to a FactoryGirl factory. I've not used FactoryGirl before, but it's easy enough to copy and paste from other factories in the directory. So far, so good. I wasn't watching the test output, but it was just one line, what could go wrong?
 
 Several updates and commits later, I thought I'd better make sure we were still "Green". Eh, not so much. Here's the output I was seeing repeated over and over again.
-<pre name="code" class="ruby">
+<% code('ruby') do %>
 Failure/Error: Unable to find matching line from backtrace
 stack level too deep
 # /home/user/.rvm/gems/ruby-1.9.2-p0@xxx/gems/activerecord-3.0.0/lib/active_record/locking/optimistic.rb:62
