--- a/source/2011-06-01-converting-mysql-databases-to-utf8.html.erb
+++ b/source/2011-06-01-converting-mysql-databases-to-utf8.html.erb
@@ -8,7 +8,7 @@ UTF8 is the way to go when you're creating a new database for an application, bu
 <!--more-->
 
 We dump the database and then import it with the new character set so we can test things out:
-<pre class="ruby"># Export your latin1 encoded database
+<% code('ruby') do %># Export your latin1 encoded database
 mysqldump
     --user=username
     --password=password
