--- a/source/2011-06-02-mac-os-x-find-the-program-running-on-a-port.html.erb
+++ b/source/2011-06-02-mac-os-x-find-the-program-running-on-a-port.html.erb
@@ -8,7 +8,7 @@ Sometimes, there's a program running on a port and you don't know what it is.  H
 <!--more-->
 
 I find this happens when I start a webserver up to test something locally and then I forget about it.  So, if I wanted to find out what was running on port 80:
-<pre class="ruby">  sudo lsof -i :80 # checks port 80
+<% code('ruby') do %>  sudo lsof -i :80 # checks port 80
 
   COMMAND   PID USER   FD   TYPE    DEVICE SIZE/OFF NODE NAME
   ruby    64888   wg    6u  IPv4 0x6ddd270      0t0  TCP *:gds_db (LISTEN)</pre>
