--- a/source/2011-06-06-remove-all-those-ds_store-files.html.erb
+++ b/source/2011-06-06-remove-all-those-ds_store-files.html.erb
@@ -6,12 +6,12 @@ post_date: 2011-06-06 14:36:17.000000000 -05:00
 I don't like committing .DS_Store files into my projects, so here's an easy way to remove them:
 
 Run this from your project folder:
-<pre name="code" class="ruby">
+<% code('ruby') do %>
 # Recursively erase all .DS_Store files in this folder and below
 find . -name \.DS_Store -exec rm -v {} \;
 </pre>
 
 Also, you can prevent the DS_Store files from being created.  Run this from the Terminal:
-<pre name="code" class="ruby">
+<% code('ruby') do %>
 defaults write com.apple.desktopservices DSDontWriteNetworkStores true
 </pre>
