--- a/source/2012-10-15-error-it-seems-your-ruby-installation-is-missing-psych-for-yaml-output.html.erb
+++ b/source/2012-10-15-error-it-seems-your-ruby-installation-is-missing-psych-for-yaml-output.html.erb
@@ -5,15 +5,16 @@ post_date: 2012-10-15 05:29:40.000000000 -05:00
 ---
 Using rvm 1.16.3 to install ruby 1.9.3-p286 and received this error my Ubuntu (9.04) server:
 
-<pre name="code" class="ruby">It seems your ruby installation is missing psych (for YAML output). 
+<% code('ruby') do %>
+It seems your ruby installation is missing psych (for YAML output).
 To eliminate this warning, please install libyaml and reinstall your ruby.
-</pre>
+<% end %>
 
 I had to install libtool first:
-<pre name="code" class="ruby">sudo apt-get install libtool</pre>
+<% code('ruby') do %>sudo apt-get install libtool<% end %>
 
 Then install libyaml via RVM:
-<pre name="code" class="ruby">rvm pkg install libyaml</pre>
+<% code('ruby') do %>rvm pkg install libyaml<% end %>
 
 Then reinstalled Ruby with:
-<pre name="code" class="ruby">rvm reinstall all --force</pre>
+<% code('ruby') do %>rvm reinstall all --force<% end %>
