--- a/source/layouts/article.haml
+++ b/source/layouts/article.haml
@@ -1,82 +1,39 @@
-!!!
-%html{:lang => "en"}
-  %head
-    %meta{:charset => "utf-8"}/
-    / Always force latest IE rendering engine or request Chrome Frame
-    %meta{:content => "IE=edge,chrome=1", "http-equiv" => "X-UA-Compatible"}/
-    / Use title if it's in the page YAML frontmatter
-    %title= current_page.data.title || "Databasically"
-    = stylesheet_link_tag "all"
-    = javascript_include_tag "all"
-    %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}/
-    %meta{:content => "Your site description", :name => "description"}/
-    %meta{:content => "your name", :name => "author"}/
-    %meta{:content => "keywords, go, here", :name => "keywords"}/
-    / FACEBOOK META
-    /
-      <meta property='og:locale' content='en_US'/>
-      <meta property="og:title" content="Your site title goes here" />
-      <meta property="og:description" content="Your Description goes here" />
-      <meta property="og:type" content="article"/>
-      <meta property="og:url" content="http://yoursite.com/">
-      <meta property="og:image" content="http://yoursite.com/images/logo.png" />
-      <meta property="fb:admins" content="111111111111"/>
-    / TWITTER META
-    /
-      <meta name="twitter:card" content="summary">
-      <meta name="twitter:site" content="@yourtwitteraccount">
-      <meta name='twitter:image' content='http://www.yoursite.com/images/logo.png'>
-      <meta name="twitter:description" content="Your Description">
-    / CONONICAL
-    / <link rel="canonical" href="http://www.yoursite.com/" />
-    / GOOGLE PLUS
-    / <link rel="publisher" href="https://plus.google.com/111111111111/about"/>
-    / styles
-    %link{:href => "http://fonts.googleapis.com/css?family=Open+Sans:800,400,300", :rel => "stylesheet", :type => "text/css"}/
-    / Le HTML5 shim, for IE6-8 support of HTML5 elements
-    /[if lt IE 9]
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    / fav and touch icons
-    / %link{:href => "assets/ico/favicon.ico", :rel => "shortcut icon"}/
-    / %link{:href => "assets/ico/apple-touch-icon-144-precomposed.png", :rel => "apple-touch-icon-precomposed", :sizes => "144x144"}/
-    / %link{:href => "assets/ico/apple-touch-icon-114-precomposed.png", :rel => "apple-touch-icon-precomposed", :sizes => "114x114"}/
-    / %link{:href => "assets/ico/apple-touch-icon-72-precomposed.png", :rel => "apple-touch-icon-precomposed", :sizes => "72x72"}/
-    / %link{:href => "assets/ico/apple-touch-icon-57-precomposed.png", :rel => "apple-touch-icon-precomposed"}/
-    %body
-      .container-narrow
-        .masthead
-          %ul.nav.nav-pills.pull-right
-            %li
-              %a{:href => "/"} Home
-            %li
-              %a{:href => "/articles"} Articles
-            %li
-              %a{:href => "#"} Contact
-          %h3.muted
-            %a{:href => '/'} Databasically
+= partial 'layouts/head'
+%body
+  .container-narrow
+    .masthead
+      %ul.nav.nav-pills.pull-right
+        %li
+          %a{:href => "/"} Home
+        %li
+          %a{:href => "/articles"} Articles
+        %li
+          %a{:href => "#"} Contact
+      %h3.muted
+        %a{:href => '/'} Databasically
 
-        .row-fluid
-          .span12
-            %h1= current_page.data.title
-            - if current_page.data.post_date
-              %h3.muted.pull-right
-                =current_page.data.post_date.strftime('%b %e %Y')
-            = yield
+    .row-fluid
+      .span12
+        %h1= current_page.data.title
+        - if current_page.data.post_date
+          %h3.muted.pull-right
+            =current_page.data.post_date.strftime('%b %e %Y')
+        = yield
 
-      %footer.footer
-        .container
-          %p.pull-right
-            %a{:href => "#"} Back to top
-      :javascript
-        // Function to slabtext the H1 headings
-        function slabTextHeadlines() {
-            $("h1").slabText({
-                // Don't slabtext the headers if the viewport is under 380px
-                "viewportBreakpoint":380
-            });
-        };
-
-        $(window).load(function() {
-            slabTextHeadlines();
+  %footer.footer
+    .container
+      %p.pull-right
+        %a{:href => "#"} Back to top
+  :javascript
+    // Function to slabtext the H1 headings
+    function slabTextHeadlines() {
+        $("h1").slabText({
+            // Don't slabtext the headers if the viewport is under 380px
+            "viewportBreakpoint":380
         });
-      = partial 'layouts/google_analytics'
+    };
+
+    $(window).load(function() {
+        slabTextHeadlines();
+    });
+  = partial 'layouts/google_analytics'
