--- a/source/layouts/portfolio.haml
+++ b/source/layouts/portfolio.haml
@@ -1,18 +1,16 @@
 = partial 'layouts/head'
 %body
+  .navbar.navbar-static-top
+    .navbar-inner
+      .container
+        %a.navbar-brand
+          %img{:src => "images/databasically-logo-with-text.png", :alt => "logo"}
+        %ul.nav.pull-right
+          %li
+            %a{:href => "index.html"} <- go back
+  
   .container
-    .masthead
-      %ul.nav.nav-pills.pull-right
-        %li
-          %a{:href => "/"} Home
-        %li
-          %a{:href => "/articles"} Articles
-        %li
-          %a{:href => "#"} Contact
-      %h3.muted
-        %a{:href => '/'} Databasically
-
-      = yield
+    = yield  
 
   %footer.footer
     .container
