nav-pills doesn't work right

--- a/source/layouts/portfolio.haml
+++ b/source/layouts/portfolio.haml
@@ -3,7 +3,7 @@
   .navbar.navbar-static-top
     .navbar-inner{:style => "-webkit-box-shadow: none; background-image: none;"}
       .container
-        %a.navbar-brand
+        %a.navbar-brand{:href => "/"}
           %img{:src => "images/databasically-logo-with-text.png", :alt => "logo"}
         %ul.nav.nav-pills.pull-right
           %li
