bootstrap header needs fixed

--- a/source/layouts/portfolio.haml
+++ b/source/layouts/portfolio.haml
@@ -1,7 +1,7 @@
 = partial 'layouts/head'
 %body
   .navbar.navbar-static-top
-    .navbar-inner{:style => "-webkit-box-shadow: none; background-image: none;"}
+    .navbar-inner
       .container
         %a.navbar-brand{:href => "/"}
           %img{:src => "images/databasically-logo-with-text.png", :alt => "logo"}
