--- a/source/portfolio_detail3.html.erb
+++ b/source/portfolio_detail3.html.erb
@@ -1,3 +1,8 @@
+---
+layout: portfolio
+title: ! 'Portfolio'
+---
+
 <!doctype html>
 <html>
   
@@ -12,25 +17,28 @@
     <link href="assets/css/m-buttons.css" rel="stylesheet">
     <link href="assets/css/custom.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:800,400,300' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
+    <script src="https://app.divshot.com/js/jquery.min.js"></script>
+    <script src="https://app.divshot.com/js/bootstrap.min.js"></script>
   </head>
   
   <body>
-    <div class="container">
-      <div class="span3 bs-docs-sidebar">
-        <ul class="nav nav-list bs-docs-sidenav">
-          <li class="logo"><a href="#masthead"><img src="img/databasically-square.png" alt="logo"></a></li>
-          <li><a href="#expert">Expertise</a></li>
-          <li><a href="#mission">Mission</a></li>
-          <li><a href="#work">Portfolio</a></li>
-          <li><a href="#about">About Us</a></li>
-          <br />
-          <li><a href="#">Process</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
+    <div class="navbar navbar-static-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a href="#" class="navbar-brand"><img src="img/databasically-logo-with-text.png" alt="logo"></a>
+            <ul class="nav pull-right">
+              <li><a href="index.html"><- go back</a></li>
+            </ul>
+        </div>
       </div>
+    </div>
+    <div class="container">
       <div class="row feature">
-        <div class="span5">
-          <span class="label label-portfolio">OVERVIEW</span>
+        <div class="span2">
+          <span class="label label-portfolio">OVERVIEW</span> 
+        </div>
+        <div class="span6">
           <h2>CHILDREN'S DOCUMENTARY NETWORK SERVES EDUCATIONAL DOCUMENTARIES TO OVER
             1 MILLION CHILDREN EACH MONTH, PROVIDING INFORMATIVE AND ENGAGING CONTENT
             TO AN AUDIENCE THAT DEMANDS AN INTUITIVE AND RESPONSIVE INTERFACE.</h2>
@@ -39,7 +47,6 @@
           <img src="//app.divshot.com/img/placeholder-100x100.gif" width="350"> 
         </div>
       </div>
-      <hr>
       <div class="row feature">
         <div class="span2">
           <span class="label label-portfolio">IMPACT</span> 
@@ -54,10 +61,9 @@
           </div>
         </div>
       </div>
-      <hr>
-      <div class="row main-features">
+      <div class="row feature">
         <div class="span2">
-          <span class="label label-success">PROBLEM</span> 
+          <span class="label label-portfolio">PROBLEM</span> 
         </div>
         <div class="span6">
           <p>Children's educational programming has hit an all-time low because it
@@ -67,17 +73,16 @@
         </div>
         <div class="span4">
           <h5>Required services</h5>
-          <ul>
-            <li>Startup hypothesis and testing</li>
-            <li>Startup risk management methodologies</li>
-            <li>Data driven technical development</li>
+          <ul class="icons-ul">
+            <li><i class="portfolio icon-2x icon-li icon-list-ol"></i>Startup hypothesis and testing</li>
+            <li><i class="portfolio icon-2x icon-li icon-warning-sign"></i>Startup risk management methodologies</li>
+            <li><i class="portfolio icon-2x icon-li icon-cogs"></i>Data driven technical development</li>
           </ul>
         </div>
       </div>
-      <hr>
-      <div class="row main-features">
+      <div class="row feature">
         <div class="span2">
-          <span class="label label-success">SOLUTION</span> 
+          <span class="label label-portfolio">SOLUTION</span> 
         </div>
         <div class="span6">
           <p>We built a full-featured support platform that has everything small businesses
@@ -96,10 +101,9 @@
           </ul>
         </div>
       </div>
-      <hr>
-      <div class="row main-features">
+      <div class="row feature">
         <div class="span2">
-          <span class="label label-success">RESULTS</span> 
+          <span class="label label-portfolio">RESULTS</span> 
         </div>
         <div class="span6">
           <p>Just a few months after Groove's initial funding, we released the app
@@ -110,10 +114,10 @@
         </div>
         <div class="span4">
           <h5>Milestones</h5>
-          <ul>
-            <li>Completed on-time</li>
-            <li>Delivered on-budget</li>
-            <li>ROI:
+          <ul class="icons-ul">
+            <li><i class="portfolio icon-2x icon-li icon-calendar"></i>Completed on-time</li>
+            <li><i class="portfolio icon-2x icon-li icon-money"></i>Delivered on-budget</li>
+            <li><i class="portfolio icon-2x icon-li icon-signal"></i>ROI:
               <b>1 month</b> 
             </li>
           </ul>
