intermediate copy updates

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -5,9 +5,10 @@ title: Databasically
 %section#masthead
   %h1 AT DATABASICALLY
   %h1 WE BUILD
-  %h1 BULLETPROOF WEB APPLICATIONS
-  %h1 FOR STARTUPS
-  %h1 AND LARGE COMPANIES
+  %h1 ROBUST WEB APPLICATIONS
+  %h1 MENTOR STARTUPS
+  %h1 RESCUE ORPHANED APPS
+  %h1 AND HELP BUSINESSES GROW
 / EXPERTISE
 %section#expert
   %h1 Rely on our expertise.
@@ -24,8 +25,6 @@ title: Databasically
       %img{:alt => "", :src => "http://lorempixel.com/g/350/250/technics?3"}/
       %h4 Game Changers
       %p There's nothing like being the first to do something. To be different than the rest of the pack. We can help you do that.
-%section#mission
-  %h1 Our mission.
 / PORTFOLIO
 %section#work
   %h1 Our Work.
@@ -129,6 +128,10 @@ title: Databasically
       %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget neque quis ligula tempus bibendum
       %p
         %a.m-btn.blue.btn-block{:href => "index.html#contact"} Contact
+/ PROCESS
+%section#process
+  %h1 Make it easy.
+/ end PROCESS
 / CONTACT
 %section#contact
   %h1 Hello There.
