--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -11,15 +11,13 @@
           %li
             %a{:href => "#expert"} Expertise
           %li
-            %a{:href => "#mission"} Mission
-          %li
             %a{:href => "#work"} Portfolio
           %li
             %a{:href => "#about"} About Us
           %li
-            %a{:href => "#"} Process
+            %a{:href => "#process"} Process
           %li
-            %a{:href => "#contact"} Contact
+            %a{:href => "/contact"} Contact
       .span9
         = yield
 
