need help getting this span color garbage to work

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -4,10 +4,13 @@ title: Databasically
 
 %section#masthead
   %h1 AT DATABASICALLY
-  %h1 WE BUILD
-  %h1 ROBUST WEB APPLICATIONS
-  %h1 MENTOR STARTUPS
-  %h1 RESCUE ORPHANED APPS
+  %h1
+    WE
+    %span{:style => "color: #E74C3C;"} BUILD
+  %h1 ROBUST WEB APPLICATIONS,
+  %h1 MENTOR STARTUPS,
+  %h1 RESCUE ORPHANED APPS,
+  %h1 TRAIN DEVELOPERS,
   %h1 AND HELP BUSINESSES GROW
 / EXPERTISE
 %section#expert
@@ -35,52 +38,53 @@ title: Databasically
       %li
         %a.selected{"data-filter" => "*", :href => "#"} All
       %li
-        %a{"data-filter" => ".web", :href => "#"} Web Design
+        %a{"data-filter" => ".web", :href => "#"} Web Applications
       %li
-        %a{"data-filter" => ".ill", :href => "#"} Illustration
+        %a{"data-filter" => ".ill", :href => "#"} Corporate Training
       %li
-        %a{"data-filter" => ".logo", :href => "#"} Logo
+        %a{"data-filter" => ".logo", :href => "#"} Startups
       %li
-        %a{"data-filter" => ".video", :href => "#"} Video
+        %a{"data-filter" => ".video", :href => "#"} Enterprise
   / START Portfolio items
-  .clearfix
-    .portfolio
-      %figure.entry.web
-        %a{:href => "portfolio_detail.html"}
-          %img{:alt => "", :src => "/images/portfolio-image.jpg"}/
-      %figure.entry.web
-        %a{:href => "#"}
-          %img{:alt => "", :src => "/images/portfolio-image2.jpg"}/
-      %figure.entry.logo
-        %a{:href => "#"}
-          %img{:alt => "", :src => "/images/portfolio-image4.jpg"}/
-      %figure.entry.web
-        %a{:href => "#"}
-          %img{:alt => "", :src => "/images/portfolio-image6.jpg"}/
-      %figure.entry.print
-        %a{:href => "#"}
-          %img{:alt => "", :src => "/images/portfolio-image5.jpg"}/
-      %figure.entry.ill
-        %a{:href => "#"}
-          %img{:alt => "", :src => "/images/portfolio-image2.jpg"}/
-      %figure.entry.web.ill.logo
-        %a{:href => "#"}
-          %img{:alt => "", :src => "/images/portfolio-image4.jpg"}/
-      %figure.entry.print.logo
-        %a{:href => "#"}
-          %img{:alt => "", :src => "/images/portfolio-image6.jpg"}/
-      %figure.entry.video.logo
-        %a{:href => "#"}
-          %img{:alt => "", :src => "/images/portfolio-image3.jpg"}/
-      %figure.entry.web.print
-        %a{:href => "#"}
-          %img{:alt => "", :src => "/images/portfolio-image5.jpg"}/
-      %figure.entry.video.print
-        %a{:href => "#"}
-          %img{:alt => "", :src => "/images/portfolio-image.jpg"}/
-      %figure.entry.web
-        %a{:href => "#"}
-          %img{:alt => "", :src => "/images/portfolio-image4.jpg"}/
+  %h3 Coming soon. In the meantime, we can provide reference contacts on request.
+  / .clearfix
+  /   .portfolio
+  /     %figure.entry.web
+  /       %a{:href => "portfolio_detail.html"}
+  /         %img{:alt => "", :src => "/images/portfolio-image.jpg"}/
+  /     %figure.entry.web
+  /       %a{:href => "#"}
+  /         %img{:alt => "", :src => "/images/portfolio-image2.jpg"}/
+  /     %figure.entry.logo
+  /       %a{:href => "#"}
+  /         %img{:alt => "", :src => "/images/portfolio-image4.jpg"}/
+  /     %figure.entry.web
+  /       %a{:href => "#"}
+  /         %img{:alt => "", :src => "/images/portfolio-image6.jpg"}/
+  /     %figure.entry.print
+  /       %a{:href => "#"}
+  /         %img{:alt => "", :src => "/images/portfolio-image5.jpg"}/
+  /     %figure.entry.ill
+  /       %a{:href => "#"}
+  /         %img{:alt => "", :src => "/images/portfolio-image2.jpg"}/
+  /     %figure.entry.web.ill.logo
+  /       %a{:href => "#"}
+  /         %img{:alt => "", :src => "/images/portfolio-image4.jpg"}/
+  /     %figure.entry.print.logo
+  /       %a{:href => "#"}
+  /         %img{:alt => "", :src => "/images/portfolio-image6.jpg"}/
+  /     %figure.entry.video.logo
+  /       %a{:href => "#"}
+  /         %img{:alt => "", :src => "/images/portfolio-image3.jpg"}/
+  /     %figure.entry.web.print
+  /       %a{:href => "#"}
+  /         %img{:alt => "", :src => "/images/portfolio-image5.jpg"}/
+  /     %figure.entry.video.print
+  /       %a{:href => "#"}
+  /         %img{:alt => "", :src => "/images/portfolio-image.jpg"}/
+  /     %figure.entry.web
+  /       %a{:href => "#"}
+  /         %img{:alt => "", :src => "/images/portfolio-image4.jpg"}/
   / End PORTFOLIO
 / ABOUT
 %section#about
