--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -17,7 +17,7 @@
           %li
             %a{:href => "#process"} Process
           %li
-            %a{:href => "/contact"} Contact
+            %a{:href => "#contact"} Contact
       .span9
         = yield
 
