fixed the textarea field

--- a/source/contact.html.haml
+++ b/source/contact.html.haml
@@ -35,6 +35,6 @@
         .field.span8
           %input#Field4.input-text.m-wrap.m-ctrl-large{:name => "Field4", :type => "email", :spellcheck => "false", :value => "", :maxlength => "255", :tabindex => "2", :placeholder => "Your email"}/
         .field.span8
-          %textarea#Field7.input-textarea.m-wrap.m-ctrl-large{:name => "Field7", :spellcheck => "true", :tabindex => "3", :onkeyup => "", :value => "", :placeholder => "Project or work comments"}/
+          %textarea#Field7.input-textarea.m-wrap.m-ctrl-large{:name => "Field7", :spellcheck => "true", :tabindex => "3", :onkeyup => "", :value => "", :placeholder => "Project or work comments"}
         .field.span8
           %input.m-btn.blue#saveform{:name => "saveForm", :type => "submit", :value => "Work with the best"}
