added hidden wufoo form elements

--- a/source/contact.html.haml
+++ b/source/contact.html.haml
@@ -34,3 +34,8 @@
               $100k+
         .field.span8
           %input.m-btn.blue#saveform{:name => "saveForm", :type => "submit", :value => "Let's talk"}
+      %ul
+        %li.hide
+          %label{:for => "comment"} Do Not Fill This Out
+          %textarea#comment{:name => "comment", :rows => "1", :cols => "1"}
+          %input#idstamp{:type => "hidden", :name => "idstamp", :value => "nMKRhelCiSvtaycMv3Roqnui14/Tl18q8ybn0N4QXuw="}
