--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -93,45 +93,49 @@ title: Databasically
     .span3
       %a.member{:href => "index.html#contact"}
         %img{:alt => "", :src => "http://lorempixel.com/350/250/people?1"}/
-      %h4 Roxanne Littlefoot
-      %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget neque quis ligula tempus bibendum
+      %h4 Wes Garrison
+      %h5 Founder, Technical Director
+      %p Published his first Ruby on Rails application in 2005. The client loved it so much that we continue to actively develop it to this day.
       %p
         %a.m-btn.blue.btn-block{:href => "#contact"} Contact
     .span3
       %a.member{:href => "index.html#contact"}
         %img{:alt => "", :src => "http://lorempixel.com/350/250/people?2"}/
-      %h4 Reggie Snake
-      %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget neque quis ligula tempus bibendum
+      %h4 Willis F. Jackson III
+      %h5 Partner, Sales & Marketing Director
+      %p Recently took his hard knocks in two startups. Learned his lessons. Mentors early stage founders in lean startup and customer development methods.
       %p
         %a.m-btn.blue.btn-block{:href => "index.html#contact"} Contact
     .span3
       %a.member{:href => "team_example.html"}
         %img{:alt => "", :src => "http://lorempixel.com/350/250/people?3"}/
-      %h4 Lucille Lou
+      %h4 Chad Metcalf
+      %h5 Developer, Chief Mustache Officer
       %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget neque quis ligula tempus bibendum
       %p
         %a.m-btn.blue.btn-block{:href => "index.html#contact"} Contact
     .span3
       %a.member{:href => "index.html#contact"}
         %img{:alt => "", :src => "http://lorempixel.com/350/250/people?4"}/
-      %h4 Evan Creamtop
+      %h4 Matt Petty
+      %h5 Developer
       %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget neque quis ligula tempus bibendum
       %p
         %a.m-btn.blue.btn-block{:href => "index.html#contact"} Contact
-    .span3
-      %a.member{:href => "index.html#contact"}
-        %img{:alt => "", :src => "http://lorempixel.com/350/250/people?5"}/
-      %h4 Piston Honda
-      %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget neque quis ligula tempus bibendum
-      %p
-        %a.m-btn.blue.btn-block{:href => "index.html#contact"} Contact
-    .span3
-      %a.member{:href => "index.html#contact"}
-        %img{:alt => "", :src => "http://lorempixel.com/350/250/people?6"}/
-      %h4 Brian Cosgrove
-      %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget neque quis ligula tempus bibendum
-      %p
-        %a.m-btn.blue.btn-block{:href => "index.html#contact"} Contact
+    / .span3
+    /   %a.member{:href => "index.html#contact"}
+    /     %img{:alt => "", :src => "http://lorempixel.com/350/250/people?5"}/
+    /   %h4 Piston Honda
+    /   %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget neque quis ligula tempus bibendum
+    /   %p
+    /     %a.m-btn.blue.btn-block{:href => "index.html#contact"} Contact
+    / .span3
+    /   %a.member{:href => "index.html#contact"}
+    /     %img{:alt => "", :src => "http://lorempixel.com/350/250/people?6"}/
+    /   %h4 Brian Cosgrove
+    /   %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget neque quis ligula tempus bibendum
+    /   %p
+    /     %a.m-btn.blue.btn-block{:href => "index.html#contact"} Contact
 / PROCESS
 %section#process
   %h1 Make it easy.
